updates stock list

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Bar Stock</title>
+    <link rel="stylesheet" href="index.css">
 </head>
-<body>
+<body style="background-color: black">
     <div id="app"></div>
 </body>
 </html>
