--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Bar Stock</title>
-    <link rel="stylesheet" href="index.css">
 </head>
-<body style="background-color: black">
+<body>
     <div id="app"></div>
 </body>
+<link rel="stylesheet" type="text/css" href="index.css">
+
 </html>
