--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Bar Stock</title>
+    <link rel="icon" type="image/png" href="../src/assets/favicon.png">
 </head>
-<body>
+<body style="background: black">
     <div id="app"></div>
 </body>
-<link rel="stylesheet" type="text/css" href="index.css">
 
 </html>
